# ecologistics-web-scraper

./: .gitignore  README.md  package-lock.json  package.json
backend/: .flake8  flake8.txt  makefile  manage.py  pyproject.toml  requirements.txt  utils.py
backend/api/: app.py  clear_mongodb.py  mongodb.py  requirements.txt  serializers.py  urls.py  views.py
backend/api/.chalice/deployed/: dev.json
backend/api/chalicelib/: mongodb.py
backend/api/chalicelib/routes/: example.py  monterey_county.py  slo_county.py
backend/api/chalicelib/tests/example/: test_example.py
backend/api/chalicelib/tests/slo_county/: test_scrape_hearings.py
backend/api/chalicelib/utils/: clear_mongodb.py
backend/api/chalicelib/utils/monterey_county/: scrape_hearings.py
backend/api/chalicelib/utils/sb_county/: scrape_hearings.py
backend/api/chalicelib/utils/slo_county/: scrape_agenda.py  scrape_hearings.py  scrape_sch.py  update_metadata.py
backend/api/models/: project.py
backend/api/routes/: monterey_county.py  sb_county.py  slo_county.py
backend/api/src/: app.py
backend/api/src/.chalice/: config.json
backend/api/src/routes/: slo_county.py
backend/api/tests/example/: test_example.py
backend/api/tests/slo_county/: test_scrape_hearings.py
backend/api/utils/monterey_county/: scrape_hearings.py
backend/api/utils/sb_county/: scrape_hearings.py
backend/api/utils/slo_county/: scrape_agenda.py  scrape_hearings.py  scrape_sch.py  update_metadata.py
backend/dj_api/: asgi.py  settings.py  urls.py  wsgi.py
docs/: adding-counties.md  contributing.md  getting-started.md
(+45 files in other folders)
