[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
chalice = "^1.30.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pymongo = {extras = ["srv"], version = "^4.6.1"}
certifi = "^2024.2.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.1.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"